--- a/EffectCompiler/EffectCompiler.vcxproj.filters
+++ b/EffectCompiler/EffectCompiler.vcxproj.filters
@@ -23,5 +23,11 @@
     <ClInclude Include="effectlayout.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="SJson.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="SRefl.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
